--- a/templates/article/_form.html.twig
+++ b/templates/article/_form.html.twig
@@ -1,4 +1,27 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
-{{ form_end(form) }}
+<div class="card my-4 p-3">
+    <div class="card-header">
+        <h2>Ajouter un article</h2>
+    </div>
+    <div class="card-body">
+        {{ form_start(form, {'attr':{'class':'mt-4 from-card'}}) }}
+            <div class="mb-3">
+            {{ form_label(form.title) }}
+            {{ form_widget(form.title, {'attr': {'class': 'form-control'}}) }}
+            {{ form_errors(form.title) }}
+            </div>
+            <div class="mb-3">
+            {{ form_label(form.content) }}
+            {{ form_widget(form.content, {'attr': {'class': 'form-control'}}) }}
+            {{ form_errors(form.content) }}
+            </div>
+            <div class="mb-3">
+            {{ form_label(form.categories) }}
+            {{ form_widget(form.categories, {'attr': {'class': 'form-control'}}) }}
+            {{ form_errors(form.categories) }}
+            </div>
+            <button class="btn btn-primary">{{ button_label|default('Ajouter l\'Article') }}</button>
+        {{ form_end(form) }}
+    </div>
+</div>
+
+
