--- a/templates/article/new.html.twig
+++ b/templates/article/new.html.twig
@@ -3,9 +3,9 @@
 {% block title %}New Article{% endblock %}
 
 {% block body %}
-    <h1>Create new Article</h1>
+    <h1 class="text-center">Mon Blog</h1>
 
     {{ include('article/_form.html.twig') }}
 
-    <a href="{{ path('app_article_index') }}">back to list</a>
+    <a href="{{ path('app_article_index') }}">Listes des articles</a>
 {% endblock %}
