--- a/templates/comment/_form.html.twig
+++ b/templates/comment/_form.html.twig
@@ -1,4 +1,8 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+
+    {{ form_row(form.author) }}
+    {{ form_row(form.content) }}
+
+    <button class="btn btn-primary mt-2">{{ button_label|default('Commenter') }}</button>
+
 {{ form_end(form) }}
