--- a/templates/comment/index.html.twig
+++ b/templates/comment/index.html.twig
@@ -35,5 +35,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_comment_new') }}">Create new</a>
+    <a href="{{ path('app_article_index') }}">Nouveau commentaire</a>
 {% endblock %}
