--- a/templates/article/edit.html.twig
+++ b/templates/article/edit.html.twig
@@ -3,9 +3,9 @@
 {% block title %}Edit Article{% endblock %}
 
 {% block body %}
-    <h1>Edit Article</h1>
+    <h1>Modifié l'article</h1>
 
-    {{ include('article/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('article/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
     <a href="{{ path('app_article_index') }}">back to list</a>
 
