--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{# {% extends 'base.html.twig' %}
 
 {% block title %}Article index{% endblock %}
 
@@ -29,4 +29,34 @@
     
 
     <a href="{{ path('app_article_new') }}" class="btn btn-primary">Créer un nouveau article</a>
+{% endblock %} #}
+{% extends 'base.html.twig' %}
+
+{% block title %}Articles{% endblock %}
+
+{% block body %}
+    <h1>Listes des articles</h1>
+
+    {% for article in pagination %}
+        <div class="card mb-3">
+            <div class="card-body">
+                <h3>{{ article.title }}</h3>
+                <p>{{ article.content|slice(0, 150) ~ '...' }}</p>
+                <p>
+                    <strong>Catégories :</strong>
+                    {% for category in article.categories %}
+                        {{ category.title }}{% if not loop.last %}, {% endif %}
+                    {% endfor %}
+                </p>
+                <a href="{{ path('app_article_show', {id: article.id}) }}" class="btn btn-sm btn-info">Voir plus</a>
+                <a href="{{ path('app_article_edit', {id: article.id}) }}" class="btn btn-sm btn-secondary">Modifier</a>
+            </div>
+        </div>
+    {% else %}
+        <p>Aucun article trouvé.</p>
+    {% endfor %}
+
+    <div class="navigation mt-4 text-center">
+        {{ knp_pagination_render(pagination) }}
+    </div>
 {% endblock %}
