--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -1,40 +1,13 @@
-{# {% extends 'base.html.twig' %}
-
-{% block title %}Article index{% endblock %}
-
-{% block body %}
-    <h1>Listes des articles</h1>
-    {% for article in articles %}
-        <div class="card mb-4">
-            <div class="card-body">
-                <h3 class="card-title">{{ article.title }}</h3>
-                <p class="card-text">{{ article.content|slice(0, 150) ~ '...' }}</p>
-                
-                <p class="card-text">
-                    <strong>Catégories :</strong>
-                    {% for category in article.categories %}
-                        <span class="badge bg-secondary">{{ category.title }}</span>
-                    {% else %}
-                        <span class="text-muted">Aucune</span>
-                    {% endfor %}
-                </p>
-
-                <a href="{{ path('app_article_show', { id: article.id }) }}" class="btn btn-primary btn-sm">Voir plus</a>
-                <a href="{{ path('app_article_edit', { id: article.id }) }}" class="btn btn-warning btn-sm">Éditer</a>
-            </div>
-        </div>
-    {% else %}
-        <p>Aucun article trouvé.</p>
-    {% endfor %}
-    
-
-    <a href="{{ path('app_article_new') }}" class="btn btn-primary">Créer un nouveau article</a>
-{% endblock %} #}
 {% extends 'base.html.twig' %}
 
 {% block title %}Articles{% endblock %}
 
 {% block body %}
+    <h1 class="text-center">Mon Blog</h1>
+
+    {{ include('article/_form.html.twig') }}
+
+   
     <h1>Listes des articles</h1>
 
     {% for article in pagination %}
@@ -56,7 +29,8 @@
         <p>Aucun article trouvé.</p>
     {% endfor %}
 
-    <div class="navigation mt-4 text-center">
+    <div class="d-flex justify-content-center mt-4">
         {{ knp_pagination_render(pagination) }}
     </div>
+
 {% endblock %}
