--- a/templates/article/new.html.twig
+++ b/templates/article/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('article/_form.html.twig') }}
 
-    <a href="{{ path('app_article_index') }}">Listes des articles</a>
+    <a class="btn btn-sencondary" href="{{ path('app_article_index') }}">Liste des articles</a>
 {% endblock %}
