--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -39,9 +39,9 @@
     
     
 
-    <a href="{{ path('app_article_index') }}">back to list</a>
+    <a class="btn btn-sencondary" href="{{ path('app_article_index') }}">Revenir à la liste</a>
 
-    <a href="{{ path('app_article_edit', {'id': article.id}) }}">edit</a>
+    <a class="btn btn-warning" href="{{ path('app_article_edit', {'id': article.id}) }}">editer</a>
 
     {{ include('article/_delete_form.html.twig') }}
 {% endblock %}
