--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('category/_form.html.twig') }}
 
-    <a href="{{ path('app_category_index') }}">back to list</a>
+    <a class="btn btn-sencondary" href="{{ path('app_category_index') }}">Revenir à la liste</a>
 {% endblock %}
