--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -54,5 +54,5 @@
 
     <a class="btn btn-warning" href="{{ path('app_article_edit', {'id': article.id}) }}">editer</a>
 
-    {{ include('article/_delete_form.html.twig') }}
+    {{ include('article/_actions.html.twig') }}
 {% endblock %}
