--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -25,6 +25,12 @@
                     {{ category.title }}{% if not loop.last %}, {% endif %}
                 {% endfor %}
             </p>
+            <button class="like-button {{ article.isLikedByIp(app.request.clientIp) ? 'liked' : '' }}"data-article-id="{{ article.id }}" data-url="{{ path('api_article_like', {id: article.id}) }}">
+            ❤️ J’aime <span id="likes-count">{{ article.getLikeCount() }}</span>
+        </button>
+
+
+
             <p> article likes:{{ article.likes|length }}</p>
             <p>Publié le : {{ article.createdAt|date('d/m/Y H:i') }}</p>
 
