--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,6 +21,25 @@
         {% endblock %}
     </head>
     <body>
+        <nav class=" navbar navbar-expand-lg navbar-dark bg-info mb-4">
+            <div class="container">
+                <a class="navbar-brand" href="{{ path('app_article_index') }}">Mon Blog</a>
+                <div class="collapse navbar-collapse justify-content-end">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_category_index') }}">Catégories</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_article_index') }}">Articles</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_comment_index') }}">Commentaires</a>
+                    </li>
+                </ul>
+                </div>
+            </div>
+        </nav>
+
         <div class="container mt-4">
             {% block body %}{% endblock %}
         </div>
