--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -16,7 +16,7 @@
             </tr>
         </thead>
         <tbody>
-        {% for category in categories %}
+        {% for category in pagination %}
             <tr>
                 <td>{{ category.id }}</td>
                 <td>{{ category.title }}</td>
@@ -34,6 +34,9 @@
         {% endfor %}
         </tbody>
     </table>
+    <div class="d-flex justify-content-center mt-4">
+        {{ knp_pagination_render(pagination, 'pagination/pagination.html.twig') }}
+    </div>
 
     <a href="{{ path('app_category_new') }}">Create new</a>
 {% endblock %}
