--- a/templates/comment/index.html.twig
+++ b/templates/comment/index.html.twig
@@ -16,7 +16,7 @@
             </tr>
         </thead>
         <tbody>
-        {% for comment in comments %}
+        {% for comment in pagination %}
             <tr>
                 <td>{{ comment.id }}</td>
                 <td>{{ comment.author }}</td>
@@ -34,6 +34,9 @@
         {% endfor %}
         </tbody>
     </table>
+    <div class="d-flex justify-content-center mt-4">
+        {{ knp_pagination_render(pagination, 'pagination/pagination.html.twig') }}
+    </div>
 
     <a href="{{ path('app_article_index') }}">Nouveau commentaire</a>
 {% endblock %}
