--- a/templates/article/_actions.html.twig
+++ b/templates/article/_actions.html.twig
@@ -24,3 +24,11 @@
     </div>
   </div>
 </div>
+<div class="d-flex justify-content-center gap-3">
+    <a href="{{ path('app_article_edit', { id: article.id }) }}">
+        <i class="fas fa-edit text-primary"></i>
+    </a>
+    <a href="#" data-bs-toggle="modal" data-bs-target="#deleteModal{{ article.id }}">
+        <i class="fas fa-trash-alt text-danger"></i> 
+    </a>
+</div>
