--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -17,50 +17,29 @@
 {% block body %}
     {{ include('article/_form.html.twig') }}
 
-    <h1>Listes des articles</h1>
-
-
    <h1>Liste des articles</h1>
 
-    <table id="articlesTable" class="table table-striped table-bordered">
+    <table id="articles-table" class="table table-striped table-bordered">
         <thead>
             <tr>
+                <th>ID</th>
                 <th>Titre</th>
-                <th>Contenu</th>
                 <th>Catégories</th>
+                <th>Commentaires</th>
+                <th>J'aime</th>
+                <th>Date</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
-            {% for article in pagination %}
-                <tr>
-                    <td>{{ article.title }}</td>
-                    <td>{{ article.content|slice(0, 150) ~ '...' }}</td>
-                    <td>
-                        {% for category in article.categories %}
-                            {{ category.title }}{% if not loop.last %}, {% endif %}
-                        {% endfor %}
-                    </td>
-                    <td>
-                        <a class="btn btn-info btn-sm" href="{{ path('app_article_show', {id: article.id}) }}">Voir</a>
-                        <a class="btn btn-warning btn-sm" href="{{ path('app_article_edit', {id: article.id}) }}">Modifier</a>
-                        <button class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal{{ article.id }}">Supprimer</button>
-
-                        {{ include('article/_actions.html.twig', {article: article}) }}
-                    </td>
-                </tr>
-            {% else %}
-                <tr>
-                    <td colspan="4">Aucun article trouvé.</td>
-                </tr>
-            {% endfor %}
+  
         </tbody>
     </table>
 
-
+{# 
     <div class="d-flex justify-content-center mt-4">
         {{ knp_pagination_render(pagination, 'pagination/pagination.html.twig') }}
-    </div>
+    </div> #}
 
 
 {% endblock %}
