--- a/templates/comment/_form.html.twig
+++ b/templates/comment/_form.html.twig
@@ -1,8 +1,13 @@
-{{ form_start(form) }}
+{{ form_start(form, {
+    'action': action|default(path('api_article_comment', {id: article.id})),
+    'attr': {
+        'id': 'comment-form',
+    }
+}) }}
 
     {{ form_row(form.author) }}
     {{ form_row(form.content) }}
 
-    <button class="btn btn-primary mt-2">{{ button_label|default('Commenter') }}</button>
+    <button type="submit" class="btn btn-primary mt-2">{{ button_label|default('Commenter') }}</button>
 
 {{ form_end(form) }}
