--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -2,18 +2,81 @@
 @import "~datatables.net-bs5/css/dataTables.bootstrap5.min.css";
 @import "~datatables.net-responsive-bs5/css/responsive.bootstrap5.min.css";
 
-// styles personnalisés
+.article-card {
+	padding: 2rem;
+	background-color: #f9f9f9;
+	border-radius: 1rem;
+	box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+}
+
+.article-title {
+	font-size: 2rem;
+	font-weight: bold;
+	margin-bottom: 1rem;
+}
+
+.article-content {
+	font-size: 1.1rem;
+	margin-bottom: 1rem;
+}
+
+.category-badge {
+	background: #e0e0e0;
+	padding: 0.3rem 0.6rem;
+	margin-right: 0.5rem;
+	border-radius: 5px;
+	font-size: 0.85rem;
+}
+
+.published-date {
+	font-size: 0.9rem;
+	color: #888;
+	margin-top: 0.5rem;
+	display: block;
+}
+
+.icon-stats {
+	display: flex;
+	gap: 1.5rem;
+	align-items: center;
+	margin-top: 1rem;
+	font-size: 1.1rem;
+}
+
+.icon-stats span {
+	display: flex;
+	align-items: center;
+	gap: 0.4rem;
+}
+
 .like-button {
-  cursor: pointer;
-  transition:all 0.3s ease;
+	background: none;
+	border: none;
+	padding: 0;
+	margin-right: 10px;
+	font-size: 1.5rem;
+	cursor: pointer;
+	color: white!important;
+	transition: transform 0.2s ease, color 0.3s ease;
 
-    &:hover {
-        transform: scale(1.1);
-    }
+	&:hover {
+		transform: scale(1.2);
+	}
 
-    &.liked {
-        color: #e74c3c;
-    }
+	&.liked {
+		color: #e74c3c; // rouge si liké
+	}
+}
+
+
+.comments-wrapper {
+	max-height: 300px;
+	overflow-y: auto;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+	padding: 1rem;
+	background-color: #f8f9fa;
+	border-radius: 0.5rem;
 }
 
 .comment-form {
