--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,5 +1,16 @@
 {% extends 'base.html.twig' %}
 
+{% set show_navbar = false %}
+
+{% block stylesheets %}
+    {{ encore_entry_link_tags('app') }}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+{% endblock %}
+
+{% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
+{% endblock %}
+
 {% block title %}Connexion{% endblock %}
 
 {% block body %}
