--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -61,7 +61,7 @@
 
                     <div class="mt-3 text-center">
                         <a href="{{ path('app_register') }}">Créer un compte</a> |
-                        <a href="#">Mot de passe oublié ?</a>
+                        <a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié ?</a>
                     </div>
 
                 </div>
