--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -12,6 +12,9 @@
             <li class="nav-item">
             <a class="nav-link" href="{{ path('app_comment_index') }}">Commentaires</a>
             </li>
+            <li class="nav-item">
+            <a class="nav-link" href="{{ path('app_profile') }}">Utilisateur</a>
+            </li>
         </ul>
         </div>
     </div>
