--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -12,7 +12,7 @@
                 <a href="{{ path('app_profile') }}" class="list-group-item list-group-item-action">Mon profil</a>
                 <a href="#" class="list-group-item list-group-item-action active">Modifier mon profil</a>
                 <a href="{{ path('app_profile_change_password') }}" class="list-group-item list-group-item-action">Changer mon mot de passe</a>
-                <a href="{{ path('app_profile_logout') }}" class="list-group-item list-group-item-action text-danger">Déconnexion</a>
+                <a href="{{ path('app_logout') }}" class="list-group-item list-group-item-action text-danger">Déconnexion</a>
             </div>
         </div>
 
