--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -64,6 +64,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('app_comment_index') }}">Commentaires</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('chat_index') }}">Messages</a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                data-bs-toggle="dropdown" aria-expanded="false">
