--- a/templates/reset_password/email.html.twig
+++ b/templates/reset_password/email.html.twig
@@ -1,9 +1,14 @@
-<h1>Hi!</h1>
+<h1>Réinitialisation du mot de passe</h1>
 
-<p>To reset your password, please visit the following link</p>
+<p>Bonjour,</p>
 
-<a href="{{ url('app_reset_password', {token: resetToken.token}) }}">{{ url('app_reset_password', {token: resetToken.token}) }}</a>
+<p>Vous avez demandé à réinitialiser votre mot de passe. Cliquez sur le lien ci-dessous :</p>
 
-<p>This link will expire in {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.</p>
+<p>
+    <a href="{{ url('app_reset_password', {token: resetToken.token}) }}">
+        Réinitialiser mon mot de passe
+    </a>
+</p>
 
-<p>Cheers!</p>
+<p>Si vous n’avez rien demandé, vous pouvez ignorer ce message.</p>
+<p>Merci,</p>
